--- a/package.json
+++ b/package.json
@@ -1,31 +1,21 @@
 {
-  "name": "manegement",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "management",
+    "version": "1.0.0",
+    "scripts": {
+        "client": "cd client && yarn start",
+        "server": "nodemon server.js",
+        "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
+    },
+    "dependencies": {
+        "@material-ui/icons": "^4.2.1",
+        "body-parser": "^1.19.0",
+        "express": "^4.17.1",
+        "multer": "^1.4.2",
+        "mysql": "^2.17.1",
+        "nodemon": "^1.19.1",
+        "yarn": "^1.17.3"
+    },
+    "devDependencies": {
+        "concurrently": "^4.0.1"
+    }
 }
